# mvgl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
notebooks/: plotting.ipynb  stationary_gl.ipynb
scripts/: demo.py  exp1.py  merge_runs.py  revision_exp1.py  revision_exp2.py  script_funs.py  stationary_gl.py  stationary_gl_admm.py  stationary_gl_cvx.py  stationary_gl_reweighted_l1_cvx.py  stgl_adj_mat.py  stgl_adj_vec.py  stgl_lap_mat.py  stmvgl.py
src/mvgl/: __init__.py  _input_checks.py  utils.py
src/mvgl/data/: __init__.py  graph.py  signals.py
src/mvgl/graphlearning/: metrics.py  multiview.py  multiview_pw.py  singleview.py  utils.py
tests/: test_graph_generation.py  test_graphlearning_utils.py  test_metrics.py  test_mvgl.py  test_signal_generation.py  test_simulated_data_gen.py  test_utils.py
