[tool.poetry]
name = "mvgl"
version = "0.1.0"
description = "A tool to learn the topology of mutliview graphs from smooth graph signals."
authors = ["Abdullah Karaaslanli"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "<2.0.0"
pandas = {extras = ["feather", "parquet"], version = ">=2.2.2", optional = true}
click = {version = "^8.1.7", optional = true}
networkx = ">=3.2.1"
seaborn = {version = ">=0.13.0", optional = true}
scipy = ">=1.11.4"
scikit-learn = ">=1.3.2"
cvxpy = ">=1.5.1"
numba = ">=0.59.1"

diffcp = ">=1.0.23"
[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
myst-nb = ">=1.0.0"
sphinx-autoapi = ">=3.0.0"
sphinx-rtd-theme = ">=2.0.0"
jupyter = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
scripts = ["pandas", "click", "seaborn"]
